--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 /dist
 **/node_modules
 /build
+**/dist
+dist
 
 # Logs
 logs
@@ -11,6 +13,7 @@ pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
+
 
 # OS
 .DS_Store
