--- a/dockerServer/docker-compose.yml
+++ b/dockerServer/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   postgres:
-    image: postgres:latest
+    image: postgres:14
     container_name: bridgehub_db_pg
     environment:
       - POSTGRES_USER=root
