--- a/publisher/package.json
+++ b/publisher/package.json
@@ -16,7 +16,10 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^22.13.1",
+    "axios": "^1.7.9",
     "commander": "^13.1.0",
+    "inquirer": "^12.4.1",
+    "socket.io-client": "^4.8.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
