--- a/publisher/package.json
+++ b/publisher/package.json
@@ -20,6 +20,7 @@
     "commander": "^13.1.0",
     "inquirer": "^12.4.1",
     "socket.io-client": "^4.8.1",
+    "systeminformation": "^5.25.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
