--- a/publisher/package.json
+++ b/publisher/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "start": "ts-node src/index.ts",
-    "build": "tsc",
+    "build": "node esbuild.config.mjs",
+    "dev": "node esbuild.config.mjs --watch",
     "watch": "tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,10 +19,15 @@
     "@types/node": "^22.13.1",
     "axios": "^1.7.9",
     "commander": "^13.1.0",
+    "configstore": "^7.0.0",
     "inquirer": "^12.4.1",
     "socket.io-client": "^4.8.1",
     "systeminformation": "^5.25.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
+  },
+  "devDependencies": {
+    "@types/configstore": "^6.0.2",
+    "esbuild": "0.25.1"
   }
 }
