--- a/publisher/tsconfig.json
+++ b/publisher/tsconfig.json
@@ -1,12 +1,15 @@
 {
   "compilerOptions": {
     "target": "ES6",
-    "module": "commonjs",
+    "module": "NodeNext",          // 或 "ESNext"
+    "moduleResolution": "nodenext", // 或 "node16"
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "noEmit": true,
+    "allowImportingTsExtensions": true,
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
 }
