--- a/webhub/package.json
+++ b/webhub/package.json
@@ -14,12 +14,16 @@
     "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^7.1.3"
+    "react-router": "^7.1.3",
+    "socket.io-client": "^4.7.0",
+    "swagger-ui-react": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/socket.io-client": "^3.0.0",
+    "@types/swagger-ui-react": "^4.19.0",
     "@unocss/preset-wind": "^65.4.0",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
