--- a/subscriber/package.json
+++ b/subscriber/package.json
@@ -4,7 +4,7 @@
   "description": "订阅者",
   "main": "src/index.ts",
   "bin": {
-    "hp": "./dist/index.js"
+    "sb": "./dist/index.js"
   },
   "scripts": {
     "start": "ts-node src/index.ts",
