删除不再使用的LICENSE、package.json和package-lock.json文件，更新分页和订阅者相关DTO，重构WebSocket连接和消息处理逻辑，优化订阅者管理功能，添加Swagger文档支持。

--- a/subscriber/package.json
+++ b/subscriber/package.json
@@ -2,7 +2,7 @@
   "name": "hub-subscriber-cli",
   "version": "1.0.0",
   "description": "订阅者",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "bin": {
     "sb": "./dist/index.js"
   },
